<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.courtcounter.MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:id="@+id/teams_layout"
        android:layout_weight="8">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:id="@+id/teamA_layout"
            android:scrollbars="vertical"
            tools:ignore="NestedWeights">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/team_a"
                android:gravity="center"
                android:padding="4dp"
                android:textSize="14sp"
                android:textColor="#616161"
                android:fontFamily="sans-serif-medium" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/startPoints"
                android:id="@+id/score_teamA_textView"
                android:gravity="center"
                android:padding="4dp"
                android:textColor="#000000"
                android:textSize="56sp"
                android:fontFamily="sans-serif-light" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/threePoints"
                android:onClick="addThreeForTeamA"
                android:layout_margin="8dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/twoPoints"
                android:onClick="addTwoForTeamA"
                android:layout_margin="8dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/onePoints"
                android:onClick="addOneForTeamA"
                android:layout_margin="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/countFines"
                android:gravity="center"
                android:textSize="14sp"
                android:textColor="#616161"
                android:fontFamily="sans-serif-medium" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/startPoints"
                android:gravity="center"
                android:id="@+id/amount_fines_teamA_textView"
                android:textColor="#000000"
                android:textSize="24sp"
                android:fontFamily="sans-serif-light" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addFinesForTeamA"
                android:layout_margin="8dp"
                android:text="@string/add" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:id="@+id/teamB_layout"
            android:scrollbars="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/team_b"
                android:gravity="center"
                android:padding="4dp"
                android:textSize="14sp"
                android:textColor="#616161"
                android:fontFamily="sans-serif-medium" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/startPoints"
                android:id="@+id/score_teamB_textView"
                android:gravity="center"
                android:padding="4dp"
                android:textColor="#000000"
                android:textSize="56sp"
                android:fontFamily="sans-serif-light" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/threePoints"
                android:onClick="addThreeForTeamB"
                android:layout_margin="8dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/twoPoints"
                android:onClick="addTwoForTeamB"
                android:layout_margin="8dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/onePoints"
                android:onClick="addOneForTeamB"
                android:layout_margin="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/countFines"
                android:gravity="center"
                android:textSize="14sp"
                android:textColor="#616161"
                android:fontFamily="sans-serif-medium" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/startPoints"
                android:gravity="center"
                android:id="@+id/amount_fines_teamB_textView"
                android:textColor="#000000"
                android:textSize="24sp"
                android:fontFamily="sans-serif-light" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addFinesForTeamB"
                android:layout_margin="8dp"
                android:text="@string/add" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:onClick="resetAllPoints"
        android:layout_weight="2"
        app:layout_constraintBottom_toBottomOf="@id/teams_layout" />
</LinearLayout>
